[project]
name = "my-cards"
version = "0.1.0"
description = "FastAPI app for tracking named cards and when they were last used"
requires-python = ">=3.9"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.40",
    "jinja2==3.1.6",
    "gunicorn==23.0.0",
]

[dependency-groups]
dev = [
    "pytest==8.3.5",
    "httpx==0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["."]
